samples/_failures_safe/1761538691_f408b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_536d4cba.c: In function ‘main’:
./samples/SAFE/__tmp_536d4cba.c:165:25: error: missing terminating " character
  165 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_536d4cba.c:165:9: error: expected expression at end of input
  165 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_536d4cba.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_536d4cba.c:165:9: error: expected declaration or statement at end of input
